- all readers now take the global parameters "reading/dynamic{conss|cols|rows}" and "reading/initialconss" into account.
- the XOR constraint handler can add two extended formulations (flow/asymmetric, parameter addextendedform)
- added the possibility to copy the original problem via SCIPcopyOrig()
- SCIPgetVarCopy() will now copy the original bounds when called for an original variable

performance improvements:
- conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
  constraint and the corresponding clique information is globally added
- improved methods SCIPlpiGetBInv{Row,Col,ACol} for row representation in SoPlex LP interface
- fasten repropagation for set-packing and -partitioning constraints
- shorten conflicts and deriving global boundchanges from conflicts
- disabled multi-aggregation in linear constraint handler when coefficients differ too much
- improved multi-aggregation in linear constraint handler when only one variable in the aggregation has infinity
  contribution

interface
- SCIPcalcMIR() gets an additional parameter "cutrank" which returns the rank of the aggregation; via SCIProwChgRank()
  the rank of a cut can be changed (default rank is 0)
- new methods for the SCIP_QUEUE data structure in pub_misc.h, misc.c SCIPqueueCreate(), SCIPqueueFree(),
  SCIPqueueClear(), SCIPqueueInsert(), SCIPqueueRemove(), SCIPqueueFirst(), SCIPqueueIsEmpty(), SCIPqueueNElems()
- added number of constraints which are marked for propagation to callback method consprop
- SCIPcalcMIR() takes an additional parameter sidetypes to determine which side of the rows to use
  (relevant for ranged rows)
- New methods SCIPconshdlrIncNCutsFound(), SCIPsepaIncNCutsFound(), and SCIPsepaIncNCutsFoundAtNode() to increase the
  number of found cuts
- added function SCIPgetFirstLPTime to return the time needed to solve the first LP of the root node